Adding video background

--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
     <title>Prot Site</title>
 </head>
 <body>
+    <!-- Preloader Spinner -->
     <div id='preloader'>
         <div id='spinner'></div>
     </div>
-    <h1>Hello world</h1>
+
+    <!-- Overlay -->
+    <div id='home-overlay'></div>
+
+    <!-- Video Background -->
+    <header id='home'>
+        <video id='video-bg-home' poster='./src/video/solo.jpg' src="/src/video/solo.mp4" autoplay loop muted></video>
+    </header>
+
 
     <!-- jQuery -->
     <script
