--- a/index.html
+++ b/index.html
@@ -1,34 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Google Fonts {Raleway & Open Sans} -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway&display=swap" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./src/css/style.css">
     <title>Prot Site</title>
 </head>
+
 <body>
     <!-- Preloader Spinner -->
     <div id='preloader'>
         <div id='spinner'></div>
     </div>
 
-    <!-- Overlay -->
-    <div id='home-overlay'></div>
-
-    <!-- Video Background -->
-    <header id='home'>
+    <!-- Home Section -->
+    <section id='home'>
+        <!-- Video Background -->
         <video id='video-bg-home' poster='./src/video/solo.jpg' src="/src/video/solo.mp4" autoplay loop muted></video>
-    </header>
+
+        <!-- Overlay -->
+        <div id='home-overlay'></div>
+
+        <!-- Home Content -->
+        <div id='home-content' class="text-center">
+            <div id='home-content-inner'>
+                <div id='home-heading'>
+                    <h1 id='home-heading-1'>Prot Site</h1><br>
+                    <h1 id='home-heading-2'>Creative <span>Solutions</span></h2>
+                </div>
+
+                <div id='home-text'>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quod nulla totam numquam odit est! Consequuntur sed nisi
+                        voluptatum. Voluptatibus, iste.</p>
+                </div>
+
+                <div id='home-btn'>
+                    <a href="#about" title="Start Now" class="btn btn-general btn-home">Start Now</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Arrow Down -->
+        <a href="#about" id="arrow-down">
+            <i class="fa fa-angle-down"></i>
+        </a>
+
+    </section>
+    <!-- End Of Home Section -->
+
+
 
 
     <!-- jQuery -->
-    <script
-        src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <script src="./src/scripts/script.js"></script>
 </body>
+
 </html>
