Adding About Section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,59 @@
     </section>
     <!-- End Of Home Section -->
 
+    <!-- About Section -->
+    <section id='about'>
+        <div id='about-p1'>
+            <div class='content-box-lg'>
+                <div class='container'>
+                    <div class='row'>
+                        <!-- About Left -->
+                        <div class='col-md-6'>
+                            <div id='about-left'>
+                                <div class='vertical-heading'>
+                                    <h5>Who Are We</h5>
+                                    <h2>A <b>Story</b><br> About Us</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- About Right -->
+                        <div class='col-md-6'>
+                            <div id='about-right'>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni minima
+                                     deleniti dicta adipisci neque obcaecati eaque repellat consequatur 
+                                     deserunt ratione suscipit omnis odit, culpa quas nulla quam 
+                                     perferendis. Qui tempora ut corrupti nobis dolorem, ratione
+                                      dignissimos maiores architecto placeat tempore.
+                                </p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum ab,
+                                     odit quam suscipit quia exercitationem atque. Cumque amet aperiam
+                                      aut in dolorem est, perferendis sit, quia ab itaque tenetur et.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class='row'>
+                        <div class='col-md-12'>
+                            <div id='about-bottom'>
+                                <img src="/src/imgs/image.png" alt="ABOUT US" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </section>
+
 
 
 
