Add about p2 html

--- a/index.html
+++ b/index.html
@@ -104,6 +104,42 @@
                 </div>
             </div>
         </div>
+
+        <div id='about-p2'>
+            <div class='content-box-md'>
+                <div class='container'>
+                    <div class='row'>
+                        <div class='col-md-4'>
+                            <div class='about-item text-justify'>
+                                <i class='fa fa-rocket'></i>
+                                <h3>Mission</h3>
+                                <hr>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam laudantium non sit sunt sequi itaque saepe eos, voluptate ipsum.</p>
+
+                            </div>
+                        </div>
+                        <div class='col-md-4'>
+                            <div class='about-item text-justify'>
+                                <i class='fa fa-eye'></i>
+                                <h3>Vision</h3>
+                                <hr>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam laudantium non sit sunt sequi itaque saepe eos, voluptate ipsum.</p>
+
+                            </div>
+                        </div>
+                        <div class='col-md-4'>
+                            <div class='about-item text-justify'>
+                                <i class="fa fa-pencil" aria-hidden="true"></i>
+                                <h3>Passion</h3>
+                                <hr>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam laudantium non sit sunt sequi itaque saepe eos, voluptate ipsum.</p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
