--- a/index.html
+++ b/index.html
@@ -110,29 +110,29 @@
                 <div class='container'>
                     <div class='row'>
                         <div class='col-md-4'>
-                            <div class='about-item text-justify'>
+                            <div class='about-item text-center'>
                                 <i class='fa fa-rocket'></i>
                                 <h3>Mission</h3>
                                 <hr>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam laudantium non sit sunt sequi itaque saepe eos, voluptate ipsum.</p>
+                                <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam laudantium non sit sunt sequi itaque saepe eos, voluptate ipsum.</p>
 
                             </div>
                         </div>
                         <div class='col-md-4'>
-                            <div class='about-item text-justify'>
+                            <div class='about-item text-center'>
                                 <i class='fa fa-eye'></i>
                                 <h3>Vision</h3>
                                 <hr>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam laudantium non sit sunt sequi itaque saepe eos, voluptate ipsum.</p>
+                                <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam laudantium non sit sunt sequi itaque saepe eos, voluptate ipsum.</p>
 
                             </div>
                         </div>
                         <div class='col-md-4'>
-                            <div class='about-item text-justify'>
-                                <i class="fa fa-pencil" aria-hidden="true"></i>
+                            <div class='about-item text-center'>
+                                <i class="fas fa-pencil-alt" aria-hidden="true"></i>
                                 <h3>Passion</h3>
                                 <hr>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam laudantium non sit sunt sequi itaque saepe eos, voluptate ipsum.</p>
+                                <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti magnam laudantium non sit sunt sequi itaque saepe eos, voluptate ipsum.</p>
 
                             </div>
                         </div>
